<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">Restaurante</string>

    <!-- Textos para el logo y platillos -->
    <string name="restaurant_logo">Restaurant</string>
    <string name="pastel_de_choclo">Pastel de Choclo</string>
    <string name="cazuela">Cazuela</string>

    <!-- Textos para subtotales y totales -->
    <string name="cantidad">Cant.</string>
    <string name="subtotal">Subtotal</string>
    <string name="comida_total">Comida</string>
    <string name="propina">Propina</string>
    <string name="total_final">TOTAL</string>

    <!-- Otros textos -->
    <string name="currency_format">$%s</string>
    <string name="propina_total" />
    <string name="_0">0</string>
    <string name="total">TOTAL:</string>
    <string name="comida">Comida:</string>
    <string name="_10_000">$10.000</string>
    <string name="cant">Cant.</string>
    <string name="_36_000">$36.000</string>
</resources>